// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders with active 1`] = `
<li
  className="ax-tabset__list-item ax-tabset__list-item--active ax-text--size-small ax-text--strong"
  title={undefined}
>
  <button
    className="ax-tabset__button"
    disabled={undefined}
    onClick={undefined}
  />
</li>
`;

exports[`Tab renders with defaultProps 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title={undefined}
>
  <button
    className="ax-tabset__button"
    disabled={undefined}
    onClick={undefined}
  />
</li>
`;

exports[`Tab renders with disabled 1`] = `
<li
  className="ax-tabset__list-item ax-tabset__list-item--disabled ax-text--size-small ax-text--strong"
  title={undefined}
>
  <button
    className="ax-tabset__button"
    disabled={true}
    onClick={undefined}
  />
</li>
`;

exports[`Tab renders with title number 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title={1000}
>
  <button
    className="ax-tabset__button"
    disabled={undefined}
    onClick={undefined}
  >
    1000
  </button>
</li>
`;

exports[`Tab renders with title react element 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title={null}
>
  <button
    className="ax-tabset__button"
    disabled={undefined}
    onClick={undefined}
  >
    <span>
      Lorem Ipsum
    </span>
  </button>
</li>
`;

exports[`Tab renders with title string 1`] = `
<li
  className="ax-tabset__list-item ax-text--size-small ax-text--strong"
  title="Lorem ipsum"
>
  <button
    className="ax-tabset__button"
    disabled={undefined}
    onClick={undefined}
  >
    Lorem ipsum
  </button>
</li>
`;
